syntax="proto3";

package dousheng.interaction.favorite;

//生成Go文件的包目录路径
option go_package="github.com/Go-To-Byte/DouSheng/video-service/apps/favorite";

import "apps/video/pb/video.proto";

//定义视频点赞接口
service Service{
  // 点赞/取消点赞 操作
  rpc FavoriteAction(FavoriteActionRequest) returns (FavoriteActionResponse);
  // 获取喜欢列表
  rpc FavoriteList(FavoriteListRequest) returns (FavoriteListResponse);
  // 用户是否点赞
  rpc IsFavorite(IsFavoriteRequest) returns (IsFavoriteResponse);
}

// 点赞信息Module
message FavoritePo {
  // 用户ID
  // @gotags: json:"user_id"
  int64 user_id = 1;
  // 视频ID
  // @gotags: json:"video_id"
  int64 video_id = 2;
}

//定义 点赞/取消点赞 请求体 POST
message FavoriteActionRequest {
  // 用户ID
  // @gotags: json:"login_user_id" validate:"required"
  int64 login_user_id = 1 ;
  // 视频id
  // @gotags: json:"video_id" validate:"required"
  int64 video_id = 2;
  //1-点赞 2-取消点赞
  // @gotags: json:"action_type" validate:"required"
  int64 action_type = 3;
}

// 点赞操作响应体
message FavoriteActionResponse{
  // 可以携带一些额外属性
  // @gotags: json:"mate"
  map<string, string> mate = 1;
}

// 获取喜欢列表请求体
message FavoriteListRequest{
  // 用户id
  // @gotags: json:"user_id" validate:"required"
  int64 user_id = 1 ;
}

// 获取喜欢列表响应体
message FavoriteListResponse {
  // 用户点赞视频列表
  // @gotags: json:"video_list"
  repeated video.Video video_list = 5;
}

// 用户是否点赞此视频
message IsFavoriteRequest {
  // 视频ID
  // @gotags: json:"video_ids"
  int64 video_ids = 1;
  // 用户 ID
  // @gotags: json:"user_id"
  int64 user_id = 2;
}

message IsFavoriteResponse {
  // 是否点赞
  // @gotags: json:"is_favorite"
  bool is_favorite = 1;
}